creating my sass variables

--- a/src/CONSTS/colors.scss
+++ b/src/CONSTS/colors.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
+
 $primary_color : #0f171e;
 $secondary_color : #1a242f;
 $font_primary : #ffffffff;
+$font_secondary :#79b8f3;
+$custom_font : 'Cabin', sans-serif;
