--- a/src/COMPONENTS/moviesArray/MoviesArray.scss
+++ b/src/COMPONENTS/moviesArray/MoviesArray.scss
@@ -3,4 +3,6 @@
 .container-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr) );
+    font-family: $custom_font;
+    grid-template-rows: 1fr;
 }
