--- a/src/COMPONENTS/moviesArray/MoviesArray.scss
+++ b/src/COMPONENTS/moviesArray/MoviesArray.scss
@@ -5,4 +5,6 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr) );
     font-family: $custom_font;
     grid-template-rows: 1fr;
+    grid-gap: 1rem;
+    padding: 1rem;
 }
